# social-ai-game-framework

./: .gitignore  .pylintrc  README.md  game_state.db  pyproject.toml
.github/workflows/: ci.yaml
configs/: example.toml  john.toml  peanut.toml
fun_game/: bot.py  config.py  database.py  guild_state.py  main.py  prompts.py
fun_game/bot/: bot.py  guild_state.py
fun_game/bot/cogs/: message_handler.py  reaction_handler.py  show_commands.py  sudo_commands.py
fun_game/cogs/: message_handler.py  reaction_handler.py  show_commands.py  sudo_commands.py
fun_game/frontends/: __init__.py
fun_game/frontends/discord/: __init__.py  bot.py  discord_game_channel.py  guild_state.py
fun_game/frontends/discord/cogs/: john_commands.py  message_handler.py  reaction_handler.py  show_commands.py  sudo_commands.py  utils.py
fun_game/game/: ai.py  bidding_manager.py  database.py  engine.py  game_channel.py  models.py  prompts.py  tool_provider.py  utils.py
tests/: test_database.py  test_engine.py  test_prompts.py
